# jps

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  compute_score.py  requirement.txt
Automatic-Bridge-Bidding-by-Deep-Reinforcement-Learning/: CMakeLists.txt  README.md  a  automatic_bridge_bidding_model.m  checkError_qlearning_103.m  checkError_qlearning_103_insample.m  checkError_qlearning_103_testing.m  cost_test.mat  cost_validate.mat  data_test.mat  data_train.mat  data_validate.mat  exampleOctaveFunction.m  get_feature.m  how-to-call-octave.cpp  init_nogpu.m  model_valcost_1.063088e-01_totalbid4_4_128_50_3.204176e-03_9.800000e-01_8.200000e-01_alpha1.000000e-01.mat  model_valcost_1.076380e-01_totalbid5_4_128_50_2.955429e-03_9.800000e-01_8.200000e-01_alpha5.000000e-02.mat  model_valcost_1.085400e-01_totalbid3_4_128_50_2.515687e-02_9.800000e-01_8.200000e-01_alpha1.000000e-01.mat  model_valcost_1.152836e-01_totalbid2_4_128_50_3.692846e-02_9.800000e-01_8.200000e-01_alpha1.000000e-01.mat  readme.txt  sinit_nogpu.m  test.py  test1.cc  tmp  update_dnn.m
bridge_models/: agent-1610-0.63.pth  agent-2day-5-250.pth  agent-2day-8-169.pth  agent-baseline-0704-26-199.pth  agent-baseline-15-189.pth
cpp/: action.h  allpass_actor.h  allpass_actor2.h  auction.cc  auction.h  baseline_actor.h  baseline_actor2.h  belief_transfer_actor.h  bid.cc  bid.h  bridge_common.h  bridge_env.cc  bridge_env.h  card.h  console_actor.h  console_messenger.cc  console_messenger.h  cross_bidding_actor.h  duplicate_bridge_env.cc  duplicate_bridge_env.h  game_option.h  game_state.cc  game_state.h  game_state2.cc  game_state2.h  greedy_play_actor.cc  greedy_play_actor.h  hand.cc  hand.h  pbn.cc  pbn.h  playing_sequence.cc  playing_sequence.h  pybind.cc  random_actor.cc  random_actor.h  score.cc  score.h  score_utils.cc  seat.h  (+2 more)
dds/: bridge.c  card_utils.py  dds.py  dds_tool.py  sample.py  sample2.py  sample_utils.py  simulate_iig.py
logs/: against_WBridge5.raw
python/: add_opening_lead.py  analyze.py  analyze_cross_bidding.py  batch_eval.py  belief_analyze.py  belief_sample.py  check.py  combine_incomplete_state.py  compare_models.py  compare_models_backup.py  compute_speed.py  console_eval.py  convert_db.py  convert_old_model.py  create_envs.py  create_envs2.py  eval.py  generate_belief_sample.py  main.py  main2.py  main_belief.py  main_belief_e2e.py  main_belief_mean_trick.py  main_e2e.py  model_utils.py  offline_weight_train.py  parse_bidding.py  parse_search_bidding.py  partition_train.py  pretrained_models.py  prob_data.py  set_path.py  sgd_changed.py  test.py  test2.py  trainer.py  try_alg.py  utils.py  utils_belief.py
python/a2c/: __init__.py  a2c.py  actor_gen.py  model.py
python/common_utils/: helper.py  multi_counter.py
python/conf/: belief_analyze.yaml  check.yaml  config.yaml  config_belief.yaml  config_belief_e2e.yaml  config_belief_mean_trick.yaml  config_e2e.yaml  eval.yaml  generate_belief_sample.yaml  offline_weight.yaml  partition_train.yaml
python/conf/baseline/: a2c.yaml  a2c_e2e.yaml  all_pass.yaml  baseline16.yaml  console_eval.yaml  greedy_play.yaml  greedy_play_model.yaml  random.yaml
python/conf/belief_model/: baseline.yaml  dyn.yaml  lstm.yaml  mean_trick.yaml  opening_lead_simple.yaml  vae.yaml
python/conf/env_actor_gen/: env_actor_gen.yaml
python/conf/game/: bridge.yaml  comm.yaml
python/conf/hydra/launcher/: submitit.yaml  submitit_slurm.yaml
python/conf/method/: a2c.yaml  a2c_e2e.yaml  r2d2.yaml
python/conf/trainer/: br.yaml  pbt.yaml  selfplay.yaml
python/conf/weight_model/: log_prob.yaml  simpleweight.yaml  softmax.yaml
python/conf/weight_pred/: simple_weight_pred.yaml
python/env_actor_gen/: __init__.py  env_actor_gen.py
python/pybridge/: __init__.py  baseline_model.py  factory.py  utils_bridge.py
python/pygames/: factory.py
rela/: CMakeCache.txt  CMakeLists.txt  IndexedLoggerFactory.cc  IndexedLoggerFactory.h  Makefile  a2c_actor.h  actor2.h  batcher.cc  batcher.h  clock.h  cmake_install.cmake  dqn_actor.h  env.h  env_actor.h  env_actor_base.h  freq_utils.h  logging.h  model.cc  model.h  model_common.h  model_locker.cc  model_locker.h  prioritized_replay.h  prioritized_replay2.h  pybind.cc  r2d2_actor.h  r2d2_actor2.h  random_actor.h  rollouts.h  rollouts_new.h  search_actor.h  search_actor_options.h  search_actor_refactored.h  search_actor_refactored_new.h  sql.cc  sql.h  stack_trace.h  static_batcher.h  string_util.cc  string_util.h  (+6 more)
simple_game/: CMakeLists.txt  README.md  cfr.py  cfr_opt.h  comm.h  comm2.h  comm_options.h  common.h  game_interface.h  game_utils.h  kuhn.h  load_strategies.py  main.cpp  match_log.json  pybind.cc  search.cc  search.h  simple_bidding.h  simple_hanabi.h  two_suited_bridge.h  utils.h
simple_game/log/: log1.txt  log2.txt
test/: score_test.cc
vis/: dds_play_seq.py  server.py  try.py
vis/example/: tcp_client.py  tcp_server.py
